force-app/main/default/objects/Performance_Metric_Line_Items__c/Performance_Metric_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Performance Metric Line Items</label>
    <nameField>
        <displayFormat>PMLI-{0}</displayFormat>
        <label>Performance Metric Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metric Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>