force-app/main/default/objects/Performance_Metric_Line_Items__c/fields/MetricName__c.field-meta.xml
<CustomField>
    <fullName>MetricName__c</fullName>
    <label>Metric Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>