force-app/main/default/objects/Performance_Metric_Line_Items__c/fields/Performance_Metric__c.field-meta.xml
<CustomField>
    <fullName>Performance_Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Metric</label>
    <referenceTo>Performance_Metric__c</referenceTo>
    <relationshipLabel>Performance Metric Line Items</relationshipLabel>
    <relationshipName>Performance_Metric_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>