force-app/main/default/objects/Performance_Metric_Line_Items__c/fields/ReportingCycle2__c.field-meta.xml
<CustomField>
    <fullName>ReportingCycle2__c</fullName>
    <label>Reporting Cycle 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>